# PlasmaDock

./: .gitignore  AGENTS.md  AUDIT-2.md  AUDIT.md  CLAUDE.md  CMakeLists.txt  PLAN.md  README.md  org.vicko.plasmadock_fedora.spec  org.vicko.wavetask.spec  org.vicko.wavetask_fedora.spec
.github/workflows/: build.yml
debian/: changelog  control  copyright  rules
layout-templates/: metadata.json
layout-templates/contents/: layout.js
package/: metadata.json
package/contents/config/: main.xml
package/contents/ui/: AudioStream.qml  ConfigAppearance.qml  ConfigBehavior.qml  ContextMenu.qml  GroupDialog.qml  MouseHandler.qml  PipeWireThumbnail.qml  PlayerController.qml  PulseAudio.qml  ScrollableTextWrapper.qml  Task.qml  TaskBadgeOverlay.qml  TaskList.qml  ToolTipDelegate.qml  ToolTipInstance.qml  ToolTipWindowMouseArea.qml  main.qml
package/contents/ui/code/: LayoutMetrics.js  TaskTools.js
plugin/: CMakeLists.txt  backend.cpp  backend.h  plugin.cpp  prefix.sh  smartlauncherbackend.cpp  smartlauncherbackend.h  smartlauncheritem.cpp  smartlauncheritem.h
